--- a/bettermessages/Resources/Credits.plist
+++ b/bettermessages/Resources/Credits.plist
@@ -76,6 +76,26 @@
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>footerText</key>
+			<string> </string>
+			<key>label</key>
+			<string> </string>
+			</dict>
+		<dict>
+			<key>action</key>
+			<string>github</string>
+			<key>icon</key>
+			<string>github.png</string>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>HBTintedTableCell</string>
+			<key>label</key>
+			<string>View Source on GitHub</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>footerText</key>
 			<string>Icons made by flaticon.com</string>
 			</dict>
 </array>
