--- a/bettermessages/Resources/Root.plist
+++ b/bettermessages/Resources/Root.plist
@@ -51,6 +51,14 @@
             <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
         </dict>
         <dict>
+            <key>cell</key>             <string>PSSwitchCell</string>
+            <key>default</key>          <true/>
+            <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>              <string>ChatHead</string>
+            <key>label</key>            <string>Hide Contact Photos</string>
+            <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
+        </dict>
+        <dict>
           <key>cell</key>
           <string>PSGroupCell</string>
           <key>label</key>
@@ -71,6 +79,132 @@
             <key>key</key>              <string>BalloonGrad</string>
             <key>label</key>            <string>Remove Gradient</string>
             <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>blueBalloon</string>
+            <key>fallback</key>
+            <string>#007aff</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Blue Balloon Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>blueText</string>
+            <key>fallback</key>
+            <string>#ffffff</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Blue Balloon Text Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>greenBalloon</string>
+            <key>fallback</key>
+            <string>#4bb33a</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Green Balloon Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>greenText</string>
+            <key>fallback</key>
+            <string>#ffffff</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Green Balloon Text Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>grayBalloon</string>
+            <key>fallback</key>
+            <string>#e6e5eb</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Incoming Balloon Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>grayText</string>
+            <key>fallback</key>
+            <string>#000000</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Incoming Balloon Text Color</string>
           </dict>
         <dict>
           <key>cell</key>
@@ -108,14 +242,14 @@
 						<string>Progress Bar Color</string>
 					</dict>
 
-        <dict>
+        <!-- <dict>
             <key>cell</key>             <string>PSSwitchCell</string>
             <key>default</key>          <true/>
             <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
             <key>key</key>              <string>ColorSend</string>
             <key>label</key>            <string>Enable Colored Send</string>
             <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
-        </dict>
+        </dict> -->
         <dict>
           <key>cell</key>
           <string>PSLinkCell</string>
@@ -136,6 +270,69 @@
           </dict>
           <key>label</key>
           <string>Send Color</string>
+        </dict>
+        <dict>
+          <key>cell</key>
+          <string>PSLinkCell</string>
+          <key>cellClass</key>
+          <string>PFSimpleLiteColorCell</string>
+          <key>libcolorpicker</key>
+          <dict>
+          <key>defaults</key>
+          <string>com.harrywantstodev.bettermessages</string>
+          <key>key</key>
+          <string>waveform</string>
+          <key>fallback</key>
+          <string>#007aff</string>
+          <key>PostNotification</key>
+          <string>com.harrywantstodev.bettermessages/settingschanged</string>
+          <key>alpha</key>
+          <false/> <!-- <true/> or <false/> Show alpha slider -->
+          </dict>
+          <key>label</key>
+          <string>Audio Message Color</string>
+        </dict>
+        <dict>
+          <key>cell</key>
+          <string>PSLinkCell</string>
+          <key>cellClass</key>
+          <string>PFSimpleLiteColorCell</string>
+          <key>libcolorpicker</key>
+          <dict>
+          <key>defaults</key>
+          <string>com.harrywantstodev.bettermessages</string>
+          <key>key</key>
+          <string>apptint</string>
+          <key>fallback</key>
+          <string>#007aff</string>
+          <key>PostNotification</key>
+          <string>com.harrywantstodev.bettermessages/settingschanged</string>
+          <key>alpha</key>
+          <false/> <!-- <true/> or <false/> Show alpha slider -->
+          </dict>
+          <key>label</key>
+          <string>App UI Tint Color</string>
+        </dict>
+        <dict>
+          <key>cell</key>
+          <string>PSLinkCell</string>
+          <key>cellClass</key>
+          <string>PFSimpleLiteColorCell</string>
+          <key>libcolorpicker</key>
+          <dict>
+          <key>defaults</key>
+          <string>com.harrywantstodev.bettermessages</string>
+          <key>key</key>
+          <string>blueBalloon</string>
+          <key>fallback</key>
+          <string>#868e99</string>
+          <key>PostNotification</key>
+          <string>com.harrywantstodev.bettermessages/settingschanged</string>
+          <key>alpha</key>
+          <true/> <!-- <true/> or <false/> Show alpha slider -->
+          </dict>
+          <key>label</key>
+          <string>Plugin Button Color</string>
         </dict>
         <dict>
             <key>cell</key>             <string>PSSwitchCell</string>
