--- a/bettermessages/Resources/Root.plist
+++ b/bettermessages/Resources/Root.plist
@@ -213,6 +213,16 @@
           <string>Color Stuff</string>
         </dict>
         <dict>
+          <key>action</key>
+          <string>PickerImage</string>
+          <key>cell</key>
+          <string>PSButtonCell</string>
+          <key>label</key>
+          <string>Choose a Background</string>
+          <key>icon</key>
+          <string>photo@3x.png</string>
+        </dict>
+        <dict>
             <key>cell</key>             <string>PSSwitchCell</string>
             <key>default</key>          <true/>
             <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
@@ -241,15 +251,6 @@
 						<key>label</key>
 						<string>Progress Bar Color</string>
 					</dict>
-
-        <!-- <dict>
-            <key>cell</key>             <string>PSSwitchCell</string>
-            <key>default</key>          <true/>
-            <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
-            <key>key</key>              <string>ColorSend</string>
-            <key>label</key>            <string>Enable Colored Send</string>
-            <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
-        </dict> -->
         <dict>
           <key>cell</key>
           <string>PSLinkCell</string>
@@ -323,7 +324,7 @@
           <key>defaults</key>
           <string>com.harrywantstodev.bettermessages</string>
           <key>key</key>
-          <string>blueBalloon</string>
+          <string>plugincolor</string>
           <key>fallback</key>
           <string>#868e99</string>
           <key>PostNotification</key>
@@ -335,12 +336,25 @@
           <string>Plugin Button Color</string>
         </dict>
         <dict>
-            <key>cell</key>             <string>PSSwitchCell</string>
-            <key>default</key>          <true/>
-            <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
-            <key>key</key>              <string>ColorBar</string>
-            <key>label</key>            <string>Color Navagation Bar</string>
-            <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
+          <key>cell</key>
+          <string>PSLinkCell</string>
+          <key>cellClass</key>
+          <string>PFSimpleLiteColorCell</string>
+          <key>libcolorpicker</key>
+          <dict>
+          <key>defaults</key>
+          <string>com.harrywantstodev.bettermessages</string>
+          <key>key</key>
+          <string>backgroundcolor</string>
+          <key>fallback</key>
+          <string>#ffffff</string>
+          <key>PostNotification</key>
+          <string>com.harrywantstodev.bettermessages/settingschanged</string>
+          <key>alpha</key>
+          <true/> <!-- <true/> or <false/> Show alpha slider -->
+          </dict>
+          <key>label</key>
+          <string>Chat Background Color</string>
         </dict>
         <dict>
           <key>cell</key>
@@ -413,6 +427,14 @@
           <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
           <key>key</key>              <string>SendEffect</string>
           <key>label</key>            <string>Disable Long Press Send Effects</string>
+          <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
+      </dict>
+      <dict>
+          <key>cell</key>             <string>PSSwitchCell</string>
+          <key>default</key>          <true/>
+          <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
+          <key>key</key>              <string>OpenTo</string>
+          <key>label</key>            <string>Open To Conversation List</string>
           <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
       </dict>
             <dict>
