--- a/bettermessages/Resources/Hide.plist
+++ b/bettermessages/Resources/Hide.plist
@@ -8,7 +8,7 @@
           <key>cell</key>
           <string>PSGroupCell</string>
           <key>label</key>
-          <string>Hide Stuff</string>
+          <string> </string>
         </dict>
         <dict>
             <key>cell</key>             <string>PSSwitchCell</string>
