--- a/bettermessages/Resources/Misc.plist
+++ b/bettermessages/Resources/Misc.plist
@@ -24,7 +24,7 @@
           <key>cell</key>
           <string>PSGroupCell</string>
           <key>label</key>
-          <string>Misc Stuff</string>
+          <string> </string>
         </dict>
         <dict>
           <key>cell</key>             <string>PSSwitchCell</string>
