--- a/bettermessages/Resources/Root.plist
+++ b/bettermessages/Resources/Root.plist
@@ -5,11 +5,21 @@
     <key>items</key>
       <array>
         <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
+            <key>headerCellClass</key>
+            <string>HBImageTableCell</string>
+            <key>height</key>
+            <integer>100</integer>
+            <key>icon</key>
+            <string>header.png</string>
+        </dict>
+        <!-- <dict>
           <key>cell</key>
           <string>PSGroupCell</string>
           <key>label</key>
-          <string>Hide Stuff</string>
-        </dict>
+          <string> </string>
+        </dict> -->
         <dict>
       <key>cell</key>
       <string>PSLinkCell</string>
