--- a/bettermessages/Resources/Theme.plist
+++ b/bettermessages/Resources/Theme.plist
@@ -5,6 +5,12 @@
     <key>items</key>
       <array>
         <dict>
+          <key>cell</key>
+          <string>PSGroupCell</string>
+          <key>label</key>
+          <string>All Message Balloons</string>
+        </dict>
+        <dict>
             <key>cell</key>             <string>PSSwitchCell</string>
             <key>default</key>          <true/>
             <key>defaults</key>         <string>com.harrywantstodev.bettermessages</string>
@@ -28,6 +34,12 @@
             <key>label</key>            <string>Remove Gradient</string>
             <key>PostNotification</key> <string>com.harrywantstodev.bettermessages/settingschanged</string>
           </dict> -->
+          <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
+            <key>label</key>
+            <string>Blue Balloon (iMessage)</string>
+          </dict>
           <dict>
             <key>cell</key>
             <string>PSLinkCell</string>
@@ -69,6 +81,33 @@
             </dict>
             <key>label</key>
             <string>Blue Balloon Text Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>blueWave</string>
+            <key>fallback</key>
+            <string>#007aff</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Blue Audio Message Balloon Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
+            <key>label</key>
+            <string>Green Balloon (SMS)</string>
           </dict>
           <dict>
             <key>cell</key>
@@ -122,6 +161,33 @@
             <key>defaults</key>
             <string>com.harrywantstodev.bettermessages</string>
             <key>key</key>
+            <string>greemWave</string>
+            <key>fallback</key>
+            <string>#4bb33a</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Greem Audio Message Balloon Color</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
+            <key>label</key>
+            <string>Grey Balloon (Incoming)</string>
+          </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
             <string>grayBalloon</string>
             <key>fallback</key>
             <string>#e6e5eb</string>
@@ -154,11 +220,32 @@
             <key>label</key>
             <string>Incoming Balloon Text Color</string>
           </dict>
+          <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>PFSimpleLiteColorCell</string>
+            <key>libcolorpicker</key>
+            <dict>
+            <key>defaults</key>
+            <string>com.harrywantstodev.bettermessages</string>
+            <key>key</key>
+            <string>grayWave</string>
+            <key>fallback</key>
+            <string>#e6e5eb</string>
+            <key>PostNotification</key>
+            <string>com.harrywantstodev.bettermessages/settingschanged</string>
+            <key>alpha</key>
+            <true/> <!-- <true/> or <false/> Show alpha slider -->
+            </dict>
+            <key>label</key>
+            <string>Incoming Audio Message Balloon Color</string>
+          </dict>
         <dict>
           <key>cell</key>
           <string>PSGroupCell</string>
           <key>label</key>
-          <string>Color Stuff</string>
+          <string>Background</string>
         </dict>
         <dict>
           <key>action</key>
@@ -169,6 +256,22 @@
           <string>Choose a Background</string>
           <key>icon</key>
           <string>photo@3x.png</string>
+        </dict>
+        <dict>
+          <key>action</key>
+          <string>PickerImage</string>
+          <key>cell</key>
+          <string>PSButtonCell</string>
+          <key>label</key>
+          <string>Remove Custom Background</string>
+          <key>icon</key>
+          <string>delete@3x.png</string>
+        </dict>
+        <dict>
+          <key>cell</key>
+          <string>PSGroupCell</string>
+          <key>label</key>
+          <string>Progress Bar</string>
         </dict>
         <dict>
             <key>cell</key>             <string>PSSwitchCell</string>
@@ -199,6 +302,12 @@
 						<key>label</key>
 						<string>Progress Bar Color</string>
 					</dict>
+          <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
+            <key>label</key>
+            <string>Extras</string>
+          </dict>
         <dict>
           <key>cell</key>
           <string>PSLinkCell</string>
@@ -222,40 +331,9 @@
         </dict>
         <dict>
           <key>cell</key>
-          <string>PSLinkCell</string>
-          <key>cellClass</key>
-          <string>PFSimpleLiteColorCell</string>
-          <key>libcolorpicker</key>
-          <dict>
-          <key>defaults</key>
-          <string>com.harrywantstodev.bettermessages</string>
-          <key>key</key>
-          <string>waveform</string>
-          <key>fallback</key>
-          <string>#007aff</string>
-          <key>PostNotification</key>
-          <string>com.harrywantstodev.bettermessages/settingschanged</string>
-          <key>alpha</key>
-          <false/> <!-- <true/> or <false/> Show alpha slider -->
-          </dict>
-          <key>label</key>
-          <string>Audio Message Color</string>
-        </dict>
-        <dict>
-          <key>cell</key>
           <string>PSGroupCell</string>
           <key>label</key>
           <string>Color Stuff</string>
-        </dict>
-        <dict>
-          <key>action</key>
-          <string>removeImage</string>
-          <key>cell</key>
-          <string>PSButtonCell</string>
-          <key>label</key>
-          <string>Choose a Background</string>
-          <key>icon</key>
-          <string>photo@3x.png</string>
         </dict>
         <dict>
           <key>cell</key>
